[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = release-note
author = Nikhil Dhandre
author_email = nik.digitronik@live.com
license_file = LICENSE
description = Simple CLI to generate release/tag note.
keywords =
    release-note
    release-tag
    release
    tag
url = https://github.com/digitronik/release-note
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    click
    requests
    tabulate
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    release-note=src:main
